tests/lsp/text_document/snapshots/lsp__text_document__document_symbol__float_nested.snap
---
source: tests/lsp/text_document/document_symbol.rs
expression: "find_symbols(r#\"\n%! main.tex\n\\documentclass{article}\n\n\\begin{document}\n\n\\begin{figure}\n    Foo\n    \\caption{Foo}\\label{fig:foo}\n\\end{figure}\n\n\\begin{figure}\n    Bar\n    \\caption{Bar}\\label{fig:bar}\n\\end{figure}\n\n\\begin{figure}\n    Baz\n    \\caption{Baz}\n\\end{figure}\n\n\\begin{figure}\n    Qux\n\\end{figure}\n\n\\end{document}\n|\n\n%! main.aux\n\\relax\n\\@writefile{lof}{\\contentsline {figure}{\\numberline {1}{\\ignorespaces Foo}}{1}\\protected@file@percent }\n\\newlabel{fig:foo}{{1}{1}}\n\\@writefile{lof}{\\contentsline {figure}{\\numberline {2}{\\ignorespaces Bar}}{1}\\protected@file@percent }\n\\@writefile{lof}{\\contentsline {figure}{\\numberline {3}{\\ignorespaces Baz}}{1}\\protected@file@percent }\"#,\n    serde_json::json!({\n            \"textDocument\" :\n            {\n                \"documentSymbol\" :\n                { \"hierarchicalDocumentSymbolSupport\" : true, },\n            },\n        }), serde_json::Value::Null)"
---
[
  {
    "name": "Figure 1: Foo",
    "detail": "fig:foo",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 4,
        "character": 0
      },
      "end": {
        "line": 7,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 17
      },
      "end": {
        "line": 6,
        "character": 32
      }
    },
    "children": []
  },
  {
    "name": "Figure: Bar",
    "detail": "fig:bar",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 9,
        "character": 0
      },
      "end": {
        "line": 12,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 11,
        "character": 17
      },
      "end": {
        "line": 11,
        "character": 32
      }
    },
    "children": []
  },
  {
    "name": "Figure: Baz",
    "kind": 6,
    "deprecated": false,
    "range": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 17,
        "character": 12
      }
    },
    "selectionRange": {
      "start": {
        "line": 14,
        "character": 0
      },
      "end": {
        "line": 17,
        "character": 12
      }
    },
    "children": []
  }
]
